# rawk

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: build_and_test.yml  ci.yml  release-plz.yml
crates/rawk/: Cargo.toml
crates/rawk-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/rawk-cli/src/: main.rs
crates/rawk-cli/tests/: cli.rs  emp.csv  interactive.rs
crates/rawk-core/: CHANGELOG.md  Cargo.toml  README.md
crates/rawk-core/src/: ast.rs  awk.rs  evaluator.rs  lexer.rs  lib.rs  parse_error.rs  parser.rs  token.rs
crates/rawk-core/tests/: onetrueawk_tests.rs  p_tests.rs  t_tests.rs
crates/rawk-core/tests/onetrueawk-testdata/: README.TESTS  p.1  p.10.awk  p.11.expected  p.13.expected  p.2.awk  p.2.expected  p.20.expected  p.21.expected  p.21a.expected  p.23.awk  p.23.expected  p.24.expected  p.25.expected  p.26.expected  p.3.awk  p.3.expected  p.30.expected  p.32.expected  p.33.expected  p.34.expected  p.36.expected  p.38.expected  p.4.awk  p.4.expected  p.40.expected  p.42.expected  p.43.expected  p.44.expected  p.45.expected  p.46.expected  p.48.expected  p.48a.expected  p.48b.expected  p.5  p.5.expected  p.50.expected  p.51.expected  p.52.expected  p.5a.awk  (+20 more)
crates/rawk/src/: main.rs
crates/rawk/tests/: cli.rs
