[package]
publish = false
name = "rawk-cli"
version = "0.1.0"
description = "The rawk cli, which is a AWK interpreter"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }


[dependencies]
rawk-core = { version = "0.0.3", path = "../rawk-core" }
