[package]
name = "rawk-cli"
version = "0.1.1"
description = "The rawk cli, which is an AWK interpreter clone. The goal is to be POSIX compatible."
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["awk", "interpreter", "scripting", "text-processing"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "rawk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
rawk-core = { version = "0.5.0", path = "../rawk-core" }
