[package]
name = "rawk-core"
version = "0.4.1"
description = "Core library for an AWK interpreter with the goal to be POSIX compatible."
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = "README.md"
keywords = ["awk", "interpreter", "scripting", "text-processing"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
regex = "1"
